[project]
name = "nordhealth"
version = "0.1.0"
description = "Find unique pairs in a list that sum to the same value"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "mypy>=1.5",
]
lint = [
    "ruff>=0.11.10",
    "isort>=5.12",
    "black>=24.1",
]